// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Component with styles should render correctly and match snapshots 1`] = `
.c0 {
  max-width: 100%;
  height: auto;
}

<Image
  alt="ABC"
  className="c0"
  elementLocator=""
  inheritedStyles=""
  loading="auto"
  placeholderSrc="http://xyz.com"
  sizes=""
  src="http://abc.com"
  srcset=""
/>
`;

exports[`Image Component with styles should render correctly with lazy load 1`] = `
.c0 {
  max-width: 100%;
  height: auto;
}

<Image
  alt="Dummy Image"
  className="c0"
  elementLocator=""
  inheritedStyles=""
  loading="lazy"
  placeholderSrc="/images/image-placeholder.png"
  sizes="(min-width: 36em) 33.3vw, 100vw"
  src="https://dummyimage.com/600x400/000/fff"
  srcset=""
/>
`;
